--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "algoliasearch": "^4.9.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-parallax-tilt": "^1.5.36",
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
