--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^17.0.2",
     "react-parallax-tilt": "^1.5.57",
     "react-particles-js": "^3.5.3",
-    "react-toastify": "^8.0.2"
+    "react-toastify": "^8.0.2",
+    "tsparticles": "^1.34.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
