--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "SET NODE_OPTIONS=--openssl-legacy-provider && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -19,9 +19,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-parallax-tilt": "^1.5.57",
-    "react-particles-js": "^3.5.3",
     "react-toastify": "^8.0.2",
-    "tsparticles": "^1.34.0"
+    "react-tsparticles": "^2.7.1",
+    "tsparticles": "^2.7.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
