--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "node": "14.17.0"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "emailjs-com": "^3.2.0",
     "lodash": "^4.17.21",
     "next": "^11.1.2",
+    "postcss": "^8.4.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-parallax-tilt": "^1.5.57",
     "react-toastify": "^8.0.2",
     "react-tsparticles": "^2.7.1",
+    "tailwindcss": "^3.2.4",
     "tsparticles": "^2.7.1"
   },
   "devDependencies": {
