--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "SET NODE_OPTIONS=--openssl-legacy-provider && next dev",
+    "dev": " next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -17,6 +17,7 @@
     "emailjs-com": "^3.2.0",
     "lodash": "^4.17.21",
     "next": "^11.1.2",
+    "noisejs": "^2.1.0",
     "postcss": "^8.4.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
